--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
