--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this is a typical api structure based on the daily life and neeeds of coast institute of technology",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": " node server.js",
+    "dev": " nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.9.0",
     "path": "^0.12.7"
   },
