--- a/server/package.json
+++ b/server/package.json
@@ -6,5 +6,10 @@
   "repository": "https://github.com/Domains18/postgress-express-react-node.git",
   "author": "Domains18 <gibsonsgibson88@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "pg": "^8.10.0"
+  }
 }
